2003-11-09  Chris Dean  <Chris.Dean@sokitomi.com>

	* misc-test.scm:  Added string-append/shared tests

2003-11-05  Per Bothner  <per@bothner.com>

	* module3.scm, obj-test.scm:  Test define-variable syntax form.
	(dvar-test-1):  Add with-compile-options form.

2003-10-19  Per Bothner  <per@bothner.com>

	* num-test.scm:  New test from Sven.Hartrumpf@fernuni-hagen.de
	(10-17 "airth. expression crashes Kawa") plus 2 derived tests.

2003-10-08  Per Bothner  <per@bothner.com>

	Based on Savannah bug #5651 from Chris Dean <Chris.Dean@sokitomi.com>.
	* module3.scm (iarr-set):  New function.
	* obj-test.scm:  New test for primitive-array macros.

2003-09-11  Per Bothner  <per@bothner.com>

	* testing.scm (test):  Catch exception.
	* misc-test.scm:  New generic procedure tests. One is expected to fail.

2003-09-08  Per Bothner  <per@bothner.com>

	Based on Savannah bug #5113 from Chris Dean <Chris.Dean@sokitomi.com>.
	* module1.scm (namespace-syntax-test):  New macro.
	* module3.scm (namespace-syntax-call):  New function.
	* obj-test.scm:  Test namespace-syntax-call.

2003-08-20  Per Bothner  <per@bothner.com>

	* test.scm:  Merge in new tests from Aubrey Jaffer's latest version
	of r4rstest.scm.
	* num-test.scm:  6 new tests, mostly from Aubrey Jaffer.

2003-08-09  Per Bothner  <per@bothner.com>

	* classes1.scm (counter, get-new-count, <IdClass1>, <IdClass2>):  New
	Test for Savannah bug #4540.
	* obj-test.scm:  New tests.

	* classes1.scm (default-offset, <DateTest>):  New test, for
	non-simple class with captured context.
	Based on Savannah (non-)bug #4540.
	* obj-test.scm:  New test.

2003-08-01  Per Bothner  <per@bothner.com>

	* HelloCgiX.xql:  Add now-needed xmlspace declaration.

2003-07-22  Chris Dean  <Chris.Dean@sokitomi.com>

	* misc-test.scm: Test for Savannah bug #4423.

2003-07-21  Per Bothner  <per@bothner.com>

	* gui-test.scm:  Use a button model twice, to test new
	gnu.kawa.models package.

2003-07-16  Per Bothner  <per@bothner.com>
